// Copyright 2022 The Bucketeer Authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package bucketeer.autoops;
option go_package = "github.com/bucketeer-io/bucketeer/proto/autoops";

message ProgressiveRolloutClause {
  string variation_id = 1;
  ProgressiveRolloutManualSchedule progressive_rollout_manual_schedule = 2;
  ProgressiveRolloutAutomaticSchedule progressive_rollout_automatic_schedule = 3;
}

message ProgressiveRolloutManualSchedule {
  message Schedule {
    int64 time = 1;
    int32 weight = 2;
  }
  repeated Schedule schedules = 1;
}

message ProgressiveRolloutAutomaticSchedule {
  enum Interval {
    UNKNOWN = 0;
    HOURLY = 1;
    DAILY = 2;
    WEEKLY = 3;
  }
  int64 started_at = 1;
  Interval interval = 2;
}
